fix for issue 560: z-index problems with study group tags

--- a/client/css/_hangout_board.scss
+++ b/client/css/_hangout_board.scss
@@ -6,6 +6,7 @@
     height: 180px;
     padding: 10px;
     position: relative;
+    z-index: -10;
     @include box-shadow(0, 12px, 60px, rgba(0, 0, 0, .5));
 
     .hangout-details {
