--- a/client/css/_hangout_list.scss
+++ b/client/css/_hangout_list.scss
@@ -5,6 +5,7 @@
   .study-group-tag {
     position: absolute;
     top: -4px;
+    z-index: 0;
   }
   padding: 0;
 
